# lego-island-asset-ripper

./: .editorconfig  .gitignore  LICENSE.md  README.md  bench.py  extract.py  pyproject.toml
lib/: ani.py  animation.py  flc.py  iso.py  si.py  smk.py  wdb.py
