[tool.poetry]
name = "pyisle"
version = "0.1.0"
description = ""
authors = ["Florian Kaiser <mail@floriankaiser.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.2.1"
typed-ffmpeg = "^3.5.1"
numpy = "^2.2.0"
python-dotenv = "^1.1.1"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 999
